Fixes display bug when width too small

--- a/front/src/main.less
+++ b/front/src/main.less
@@ -7,6 +7,12 @@
 	overflow-x: auto;
 	overflow-y: hidden;
 
+	#headerContainer,
+	#notificationsContainer,
+	#contentContainer {
+		min-width: @contentMinWidth + 100px;
+	}	
+
 	#headerContainer {
 		position: absolute;
 		top: 0;
